Refactor User Controller & Add UserService
